alignment fix

--- a/style.css
+++ b/style.css
@@ -159,6 +159,9 @@ strong {
 p {
     margin: 0 0 20px
 }
+p1 {
+    margin: 0 0 0px
+}
 
 .hover {
     transition: all 150ms ease-in-out;
